# code-challenge-2024-wthrajat

./: .gitignore  Cargo.toml  SOLUTION.MD  output.txt  run.sh  solution.md
solution-rust/src/: lib.rs
src/: lib.rs  main.rs
