[package]
name = "rajat-solution"
version = "0.1.0"
authors = ["rajat <logsinx@proton.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecdsa  = {version = "0.16.9", features = ["der"] }
libsecp256k1 = "0.7.1"
secp256k1 = "0.29.0"
serde_json = "1.0.116"
sha2 = "0.10.8"
num-bigint = "0.4.4"
num-traits = "0.2.14"
crypto = "0.5.1"
digest = "0.10.7"
hex = "0.4.2" 
base58 = "0.2.0"
rand = "0.8.4"
ripemd = "0.1.3"
hmac = "0.12.1"
byteorder = "1.4.3"
serde = "1.0"
log = "0.4.21"
